# jelly

./: .gitignore  Makefile  README.md  jelly.cabal  picker.m  stack.yaml
Jelly.app/Contents/: Info.plist
cbits/: ffi_wrappers.c
libsrc/: fetch.sh
mac/: .gitignore
mingw/: .gitignore
mingw-deps/: fetch.sh
src/: Arrangement.hs  Audio.hs  AudioPipe.hs  Jammit.hs  Main.hs  TTF.hs  Util.hs
src/Jelly/: Arrangement.hs  AudioPipe.hs  Jammit.hs  Prelude.hs  SDL.hs  State.hs
