name: jelly
version: 0.1
build-type: Simple
cabal-version: >= 1.10
data-files:
  resources/*.png

flag LocalResources
  description: Looks for the "resources/" folder in the same dir as the executable
  default: False

executable jelly
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Jammit
    Paths_jelly
    AudioPipe
    TTF
    Util
    Arrangement
  default-language: Haskell2010
  ghc-options: -Wall -threaded
  build-depends:
    base >= 4.7 && < 4.8
    , sdl2 >= 1.3.0 && < 1.4
    , sdl2-image
    , containers
    , directory
    , filepath
    , property-list
    , OpenAL
    , hsndfile
    , hsndfile-vector
    , vector
    , rubberband
    , conduit
    , transformers
    , resourcet
  pkgconfig-depends:
    SDL2_ttf
  c-sources:
    cbits/ffi_wrappers.c
  if flag(LocalResources)
    build-depends: FindBin
    cpp-options: -DLOCALRESOURCES
