name: jelly
version: 0.1
build-type: Simple
cabal-version: >= 1.10
data-files:
  resources/*.png
license: GPL-3
license-file: LICENSE
category: Music
maintainer: miketolly@gmail.com
synopsis: Free viewer for Jammit sheet music and audio content
homepage: https://github.com/mtolly/jelly

flag LocalResources
  description: Looks for the "resources/" folder in the same dir as the executable
  default: False

executable jelly
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Paths_jelly
    Jelly.Jammit
    Jelly.AudioPipe
    Jelly.SDL
    Jelly.Arrangement
    Jelly.Prelude
  default-language: Haskell2010
  ghc-options: -Wall -threaded
  build-depends:
    base >= 4.7 && < 4.8
    , sdl2 >= 1.3.0 && < 1.4
    , sdl2-image
    , containers
    , directory
    , filepath
    , property-list
    , OpenAL
    , hsndfile
    , hsndfile-vector
    , vector
    , rubberband
    , conduit
    , transformers
    , resourcet
    , lens
  if flag(LocalResources)
    build-depends: FindBin
    cpp-options: -DLOCALRESOURCES
